# bionpu

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  conftest.py  pyproject.toml
benchmarks/basecalling/: bench_linear_projection_block.py  run_pod5.sh
benchmarks/crispr/: run_chr.sh
benchmarks/genomics/: bench_kmer_count.py  run_kmer_bench.sh
docs/: AIE2P-CRISPR-shape-validation.md  ENERGY_METHODOLOGY.md  REPRODUCE.md  STATUS.md  STRATEGY-aie2p-genomics-workload-fit.md  aie2p-scorer-port-design.md  model-selection-audit.md  reproduce-dnabert-epi.md
reference/basecalling/: bionpu-reference.fastq
reference/crispr/: casoffinder-canonical.tsv  casoffinder-chr22-10guides.tsv
results/cpg/v0-chr22/: measurements.json
results/genome_fetcher/v1/: measurements.json
results/methylation_context/v0-chr22/: .gitignore  README.md  measurements.json  run_chr22_validation.py
results/methylation_context/v1-c1024-b4-chr22/: .gitignore  README.md  measurements.json  run_chr22_validation.py
results/methylation_context/v1-c1024-b8-chr22/: .gitignore  README.md  measurements.json  run_chr22_validation.py
results/methylation_context/v1-c1024-chr22/: .gitignore  README.md  measurements.json  run_chr22_validation.py
src/bionpu/: __init__.py  cli.py  scan.py
src/bionpu/bench/: POWER_DOMAINS.md  UNITS.md  __init__.py  harness.py  probe.py  runner.py  schema.json  units.py
src/bionpu/bench/energy/: SANITY-LOG.md  __init__.py  nvsmi.py  rapl.py  xrt.py
src/bionpu/data/: __init__.py  canonical_sites.py  cpg_oracle.py  genome_fetcher.py  kmer_oracle.py  load_smoke.py  methylation_context_oracle.py  minimizer_oracle.py  pam_iupac_oracle.py  paralog_mapper.py  primer_oracle.py  tandem_repeat_oracle.py
src/bionpu/data/fetchers/: __init__.py  crisproff.py  doench_2016.py  guide_seq.py  pod5_hg002.py  reference_genomes.py  yaish_2024.py
src/bionpu/dispatch/: __init__.py  _pyxrt_helpers.py  devices.py  npu.py  npu_silicon_lock.py  profile.py
src/bionpu/genomics/: __init__.py  crispr_design.py  guide_design.py  guide_workflow.py  offtarget_seed.py
src/bionpu/genomics/adapter_trim/: __init__.py  cli.py  fastq.py  trimmer.py
src/bionpu/genomics/be_design/: __init__.py  bystander.py  cli.py  off_target.py  pam_variants.py  ranker.py  target_resolver.py  window_score.py
src/bionpu/genomics/library_design/: __init__.py  cli.py  controls.py  library_balancer.py  output.py  per_gene_designer.py  pipeline.py
src/bionpu/genomics/pe_design/: DESIGN.md  __init__.py  cli.py  edit_spec.py  enumerator.py  gaps.yaml  off_target.py  output.py  pe3_nicking.py  pegrna_constants.py  ranker.py  types.py
src/bionpu/genomics/seed_extend/: __init__.py  chain.py  index.py  lookup.py
src/bionpu/iron_extensions/: INVENTORY.md  __init__.py  cascade_stream.py  gaps.yaml
src/bionpu/kernels/: __init__.py
src/bionpu/kernels/basecalling/: __init__.py
src/bionpu/kernels/basecalling/lstm_cell_bf16/: CMakeLists.txt  DESIGN.md  Makefile  PASSPORT.json  __init__.py  gaps.yaml  lstm_cell_bf16.cc  lstm_cell_bf16.py  runner.cpp
src/bionpu/kernels/common/: __init__.py
src/bionpu/kernels/crispr/: __init__.py
src/bionpu/kernels/crispr/match_multitile/: CMakeLists.txt  Makefile  __init__.py  gaps.yaml  match_kernel.cc  multitile.py  runner.cpp
src/bionpu/kernels/crispr/match_singletile/: CMakeLists.txt  Makefile  __init__.py  gaps.yaml  match_kernel.cc  match_singletile.py  test.cpp
src/bionpu/kernels/crispr/pam_filter_pktmerge/: CMakeLists.txt  DESIGN.md  Makefile  __init__.py  gaps.yaml  pam_filter_pktmerge.py  runner.cpp  tile_a_pktmerge.cc
src/bionpu/kernels/genomics/: __init__.py
src/bionpu/kernels/scoring/: __init__.py
src/bionpu/quant/: __init__.py  calibrate.py  passport.py  passport.schema.json  peano_export.py
src/bionpu/scoring/: __init__.py  _extract_head.py  _head.py  _tokenize.py  cfd.py  dnabert_epi.py  doench_rs2.py  pegrna_folding.py  pridict2.py  quantize.py  types.py
src/bionpu/validation/: __init__.py  agreement.py  cli.py  fixtures.py
src/bionpu/validation/ref_adapters/: __init__.py  cas_offinder.py  cutadapt.py  pridict2.py  ucsc_pam.py
src/bionpu/verify/: README.md  __init__.py  _crispr_canonical.py  _fastq.py  basecalling.py  crispr.py  score.py  types.py
tests/: test_adapter_trim.py  test_basecalling_dispatch_helper.py  test_be_bystander.py  test_be_design_cli.py  test_be_off_target.py  test_be_window_score.py  test_bench_probe.py  test_bench_xrt_resolve.py  test_cli_design.py  test_cpg_island_correctness.py  test_cpg_island_kernel.py  test_cpg_oracle.py  test_crispr_design_e2e_validation.py  test_crispr_design_smoke.py  test_crispr_design_v1_modes.py  test_crispr_guide_design.py  test_crispr_guide_workflow.py  test_crispr_offtarget_seed.py  test_genome_fetcher.py  test_kernels_bert_int8_matmul.py  test_kernels_bert_int8_matmul_ffn.py  test_kernels_bert_int8_matmul_qkvo.py  test_kmer_count_correctness.py  test_kmer_count_init.py  test_kmer_oracle.py  test_library_design_balancer.py  test_library_design_cli.py  test_library_design_controls.py  test_library_design_per_gene.py  test_linear_projection_fused_batched_correctness.py  test_linear_projection_fused_correctness.py  test_linear_projection_fused_dispatch_correctness.py  test_methylation_context_correctness.py  test_methylation_context_oracle.py  test_minimizer_correctness.py  test_minimizer_oracle.py  test_npu_scan_multi_batch.py  test_npu_scan_small_fixture.py  test_pam_filter_iupac.py  test_paralog_aware_ranker.py  (+28 more)
tests/fixtures/crispor_reference/: AAVS1.tsv  DELTAS.md  EMX1.tsv  genes_pinned.json
tests/fixtures/crispor_reference/bionpu_output/: AAVS1_bionpu.tsv  ATM_bionpu.tsv  BRCA1_bionpu.tsv  BRCA2_bionpu.tsv  CCR5_bionpu.tsv  CD33_bionpu.tsv  CFTR_bionpu.tsv  CXCR4_bionpu.tsv  DNMT1_bionpu.tsv  EMX1_bionpu.tsv  FANCF_bionpu.tsv  HBB_bionpu.tsv  HPRT1_bionpu.tsv  KRAS_bionpu.tsv  MYC_bionpu.tsv  RNF2_bionpu.tsv  RUNX1_bionpu.tsv  (+4 more)
tools/: host-energy-setup.sh  run-14fold-sweep.sh  run-fold-protocol.sh  run_20gene_crispor_fixtures.sh  run_20gene_validation.py  setup-dnabert-host.sh
(+370 files in other folders)
