[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionpu"
version = "0.1.0.dev0"
description = "AIE2P-accelerated genomics with reference-equivalence verification"
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.11"
authors = [
    { name = "Matt Davis", email = "matt@opensensor.io" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.26",
    # mlir-aie (the iron Python API + dialect bindings) is consumed at
    # runtime; users build it themselves and put it on PYTHONPATH.
    # We do not pip-depend on it because it is not on PyPI.
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-cov",
]
dev = [
    "ruff",
    "mypy",
    "build",
]
# Track B (Prime Editor pegRNA design) runtime extras.
# - viennarna: GPL; ViennaRNA Python bindings for pegRNA folding features (T4)
# - PRIDICT 2.0 itself is MIT-licensed but NOT on PyPI; users must
#   `git clone https://github.com/uzh-dqbm-cmi/PRIDICT2` and add it to
#   PYTHONPATH (or use `pip install -e ./PRIDICT2` if upstream ever ships
#   a setup.py). T1 probe doc: state/track-b-prereq-probe.md
# - pandas pin: PRIDICT2 requires pandas <3.0 (pandas 3.x triggers
#   "['seq_id'] not in index" inside their internal DataFrame indexing)
pe = [
    "viennarna>=2.6,<3.0",
    "biopython>=1.81",
    "pandas>=2.0,<3.0",
    "scikit-learn>=1.3",
    "primer3-py>=2.3",
    "prettytable>=3.8",
    "tqdm>=4.65",
    "torch>=2.0",
]

[project.scripts]
bionpu = "bionpu.cli:main"

[project.urls]
Homepage = "https://github.com/opensensor/bionpu"
Repository = "https://github.com/opensensor/bionpu.git"
Issues = "https://github.com/opensensor/bionpu/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bionpu = ["kernels/**/*.cc", "kernels/**/*.cpp", "kernels/**/*.py", "kernels/**/Makefile", "kernels/**/MANIFEST.md"]
